# simple-interpreter

./: CMakeLists.txt  README.md  f
terrible-database/: CMakeLists.txt
terrible-database/app/: CMakeLists.txt  main.cpp
terrible-database/includes/: columns.h  create_state_machine.h  data_types.h  expr_state_machine.h  insert_state_machine.h  parser.h  project_operator.h  read_op.h  read_operator.h  select_state_machine.h  state_machine.h  table.h  tokenizer.h  update_state_machine.h  write_op.h  write_operator.h
terrible-database/includes/fsms/: create_state_machine.h  expr_state_machine.h  insert_state_machine.h  join_state_machine.h  select_state_machine.h  state_machine.h  update_state_machine.h
terrible-database/includes/operators/: create_operator.h  filter_operator.h  insert_operator.h  join_operator.h  operator.h  project_operator.h  read_operator.h  set_operator.h  update_operator.h  write_operator.h
terrible-database/src/: CMakeLists.txt  create_state_machine.cpp  data_types.cpp  expr_state_machine.cpp  insert_state_machine.cpp  main.cpp  parser.cpp  project_operator.cpp  read_op.cpp  read_operator.cpp  select_state_machine.cpp  tokenizer.cpp  update_state_machine.cpp  write_op.cpp  write_operator.cpp
terrible-database/src/fsms/: create_state_machine.cpp  expr_state_machine.cpp  insert_state_machine.cpp  join_state_machine.cpp  (+2 more)
terrible-database/tables/: jl_table.json  jr_table.json  large_table.json  simple_table.json  test_table.json  u1_table.json  u2_table.json
terrible-database/test/: CMakeLists.txt  operator_test.cpp  parser_test.cpp
(+62 files in other folders)
